<resources>
    <string name="app_name">Resources</string>
    <string name="text">Hello world!</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="color">Color</string>
    <string name="exit">Exit</string>
    <string name="back1">Back1</string>
    <string name="back2">Back2</string>
    <string name="background">Back</string>
    <string name="font">Font</string>
    <string name="normal">Normal</string>
    <string name="bold">Bold</string>
</resources>
