<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/color"
        android:title="@string/color">
        <menu>
            <item android:id="@+id/blue"
                android:title="@string/blue"/>
            <item android:id="@+id/red"
                android:title="@string/red"/>
            <item android:id="@+id/green"
                android:title="@string/green"/>
        </menu>
    </item>
    <item android:id="@+id/style"
        android:title="@string/font">
        <menu>
            <item android:id="@+id/bold"
                android:title="@string/bold"/>
            <item android:id="@+id/normal"
                android:title="@string/normal"/>
        </menu>
    </item>
    <item android:id="@+id/image"
        android:title="@string/background">
        <menu>
            <item android:id="@+id/back"
                android:title="@string/background"/>
            <item android:id="@+id/b1"
                android:title="@string/back1"/>
            <item android:id="@+id/b2"
                android:title="@string/back2"/>
        </menu>
    </item>
    <item android:id="@+id/exit"
        android:title="@string/exit"/>
</menu>